<resources>
    <string name="app_name">ArmaCalc</string>
    <string name="main_description_text">Choose a caliber</string>
    <string name="mm120">120mm</string>
    <string name="mm82">82mm</string>
    <string name="d30a">d30a</string>
    <string name="mm120_description">2B11 120mm</string>
    <string name="mm82_description">2B14 82mm</string>
    <string name="d30a_description">D-30A</string>
    <string name="wrong_range">Wrong Range: </string>
    <string name="range">Range : </string>
    <string name="azimute">Azimute : </string>
    <string name="range_not_null">Range cannot be zero</string>
    <string name="mm120_text">Firing range\n485m-7188m</string>
    <string name="mm82_text">Firing range\n100m-4500m</string>
    <string name="d30a_text">Firing range\n950m-15400m</string>
    <string name="charge_0">Charge 0: </string>
    <string name="charge_1">Charge 1: </string>
    <string name="charge_2">Charge 2: </string>
    <string name="charge_3">Charge 3: </string>
    <string name="charge_4">Charge 4: </string>
    <string name="charge_5">Charge 5: </string>
    <string name="charge_6">Charge 6: </string>
    <string name="clear_all">clear all</string>
    <string name="x2_text">X coord</string>
    <string name="y2_text">Y coord</string>
    <string name="x1_text">X coord</string>
    <string name="y1_text">Y coord</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="youtube_confirm_text">Video guide will be opened on youtube, continue?</string>
    <string name="mortar">Mortar</string>
    <string name="target">Target</string>
    <string name="altitude">Altitude</string>
    <string name="dper100">D per 100m</string>
    <string name="dtarget">D on target</string>
    <string name="elevation_table">Elevation by table</string>
    <string name="elevation_target">elevation on target</string>
    <string name="angle_result">Angle : </string>
    <string name="results">Results</string>
    <string name="empty_fields">Please fill all fields</string>
    <string name="wrong_charge">Wrong charge !</string>
    <string name="all_clear">All fields cleared</string>
    <string name="hold_3_sec">Hold 3 sec to clear all</string>

    <string name="coming_soon">Coming soon</string>
    <string name="wait_for_more">Please wait for more options</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="faq">FAQ</string>
    <string name="info">Info</string>
    <string name="dark_theme">Dark theme</string>
    <string name="keep_screen">Keep awake</string>
    <string name="logo_description">App logo</string>

    <string name="about_link_text">Developed by <a href="https://github.com/hyvachok">Demid Filippov</a> and <a href="https://github.com/bonjonson">Artem Grishin</a></string>
    <string name="email_us">You can contact us by e-mail <a href="mailto:theflyisabird@gmail.com">theflyisabird@gmail.com</a></string>
    <string name="hyvachok_link">https://github.com/hyvachok</string>
    <string name="jhonson_link">https://github.com/bonjonson</string>
    <string name="youtube_URL">https://youtu.be/BDOkfGonH70</string>
    <string name="about_main_text">Ballistic calculator for mortars in computer game Arma 3 by Bohemia interactive.</string>
    <string name="about_warning_text">Warning! Its compatible only with RHS mods</string>
    <string name="about_arma_yext">All rights to the Arma trademark are owned by Bohemia Interactive.</string>
    <string name="about_wog_text">This app is exclusively designed for WOG3 project and may not be compatible with other Arma 3 projects. We also invite everyone to take part in our weekly TvT games. Additional information could be found here: <a href="https://wog3.info">wog3.info</a></string>

</resources>
