<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".AboutActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/logo_description"
        app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_warning_text"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_main_text"
        android:textAlignment="center"
        android:layout_margin="4dp"
        android:textSize="16sp" />

    <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/about_arma_yext"
            android:textAlignment="center"
            android:textSize="16sp" />

    <TextView
        android:id="@+id/aboutTextWog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:linksClickable="true"
        android:text="@string/about_wog_text"
        android:textColorLink="@color/design_default_color_primary_dark"
        android:textAlignment="center"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/d_logo" />

    <TextView
        android:id="@+id/aboutLinkText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:linksClickable="true"
        android:text="@string/about_link_text"
        android:textAlignment="center"
        android:textColorLink="@color/design_default_color_primary_dark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/aboutLinkEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="1dp"
        android:linksClickable="true"
        android:text="@string/email_us"
        android:textAlignment="center"
        android:textColorLink="@color/design_default_color_primary_dark"
        android:textSize="16sp" />


</LinearLayout>