<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_dark_theme"
        android:checkable="true"
        android:enabled="false"
        android:icon="@android:drawable/checkbox_off_background"
        android:orderInCategory="1"
        android:title="@string/dark_theme"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_faq"
        android:orderInCategory="2"
        android:title="@string/faq"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="3"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>