<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context="com.github.dn3tao.calcfortraitor.CalculateActivity">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/mortarCard"
        style="@style/CalculateActivityCards"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        card_view:cardCornerRadius="5dp">

        <LinearLayout
            style="@style/CalculateActivityCardsContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="6dp"
                android:text="@string/mortar"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    style="@style/CalculateActivityLabelText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:labelFor="@id/editx1"
                    android:text="@string/x" />

                <TextView
                    android:id="@+id/textView4"
                    style="@style/CalculateActivityLabelText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:labelFor="@id/edity1"
                    android:text="@string/y" />

                <TextView
                    android:id="@+id/textView7"
                    style="@style/CalculateActivityLabelText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:labelFor="@id/editAltOnMortar"
                    android:text="@string/altitude" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editx1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:digits="0123456789"
                    android:ems="10"
                    android:hint="@string/x1_text"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:maxLength="10"
                    android:nextFocusForward="@id/edity1" />

                <EditText
                    android:id="@+id/edity1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:digits="0123456789"
                    android:ems="10"
                    android:hint="@string/y1_text"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:maxLength="10"
                    android:nextFocusForward="@id/editAltOnMortar" />

                <EditText
                    android:id="@+id/editAltOnMortar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:digits="0123456789"
                    android:ems="10"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:maxLength="10"
                    android:nextFocusForward="@id/editx2" />
            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/targetCard"
        style="@style/CalculateActivityCards"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        card_view:cardCornerRadius="5dp">

        <LinearLayout
            style="@style/CalculateActivityCardsContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="6dp"
                android:text="@string/target"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/textView5"
                    style="@style/CalculateActivityLabelText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:labelFor="@id/editx2"
                    android:text="@string/x" />

                <TextView
                    android:id="@+id/textView6"
                    style="@style/CalculateActivityLabelText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:labelFor="@id/edity2"
                    android:text="@string/y" />

                <TextView
                    android:id="@+id/textView8"
                    style="@style/CalculateActivityLabelText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:labelFor="@id/editAltOnTarget"
                    android:text="@string/altitude" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editx2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:digits="0123456789"
                    android:ems="10"
                    android:hint="@string/x2_text"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:maxLength="10"
                    android:nextFocusForward="@id/edity2" />

                <EditText
                    android:id="@+id/edity2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:digits="0123456789"
                    android:ems="10"
                    android:hint="@string/y2_text"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:maxLength="10"
                    android:nextFocusForward="@id/editAltOnTarget" />

                <EditText
                    android:id="@+id/editAltOnTarget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:digits="0123456789"
                    android:ems="10"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:maxLength="10" />


            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/resultCard"
        style="@style/CalculateActivityCards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                style="@style/CalculateActivityCardsContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/results"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/resultHeaderText"
                style="@style/CalculateActivityResultText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty_fields" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/range"
                    style="@style/CalculateActivityCardsResultText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text=""
                    tools:text="@string/results" />

                <TextView
                    android:id="@+id/azimute"
                    style="@style/CalculateActivityCardsResultText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text=""
                    tools:text="@string/results" />
            </LinearLayout>

            <View
                android:id="@+id/divider_results"
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:layout_marginTop="8dp"
                android:background="@drawable/divider_gradient" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/result1"
                    style="@style/CalculateActivityCardsResultText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text=""
                    tools:text="@string/results" />

                <TextView
                    android:id="@+id/result2"
                    style="@style/CalculateActivityCardsResultText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text=""
                    tools:text="@string/results" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/result3"
                    style="@style/CalculateActivityCardsResultText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text=""
                    tools:text="@string/results" />

                <TextView
                    android:id="@+id/result4"
                    style="@style/CalculateActivityCardsResultText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text=""
                    tools:text="@string/results" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/result5"
                    style="@style/CalculateActivityCardsResultText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text=""
                    tools:text="@string/results" />

                <TextView
                    android:id="@+id/result6"
                    style="@style/CalculateActivityCardsResultText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text=""
                    tools:text="@string/results" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="6dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/result7"
                    style="@style/CalculateActivityCardsResultText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text=""
                    tools:text="@string/results" />

                <TextView
                    android:id="@+id/result8"
                    style="@style/CalculateActivityCardsResultText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text=""
                    tools:text="@string/results" />
            </LinearLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@drawable/ic_my_icon" />

</LinearLayout>
